--- a/index.html
+++ b/index.html
@@ -41,76 +41,6 @@
 	<!-- Libraries that various boards require -->
 	<script src="/scripts/twitter.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-	<script>
-		(function(global){
-			var ucfirst = function(str){
-				return str.charAt(0).toUpperCase() + str.substr(1);
-			}
-			if(LIB && LIB.isHostMethod(document, 'getElementsByTagName')){
-				var scripts = document.getElementsByTagName('script');
-			}
-			function handleBoard(board, boardConfig){
-				if(board){
-					var gBoard = global[ucfirst(board)+'Board'];
-					if(gBoard){
-						var b = new gBoard;
-					}
-				}
-				// Generate board content and put it in <ul>
-				if(b && b.init && LIB.areFeatures('query', 'setHtml') && LIB.isHostMethod(document, 'getElementsByTagName') && LIB.isHostMethod(document, 'createElement')){
-					var ul = LIB.query('ul');
-					if(ul && ul[0]){
-						var grid = boardConfig.grid ? boardConfig.grid : '4';
-						var el = document.createElement('li');
-						el.className = 'board';
-						el.className += ' span'+grid;
-						LIB.setHtml(el, '<div class="'+board+'_board"></div>');
-						ul[0].appendChild(el);
-						var boardDiv = el.getElementsByTagName('div');
-						if(boardDiv && boardDiv[0]){
-							b.init(boardDiv[0], boardConfig);
-						}
-					}
-				}
-			}
-			function loadBoards(boards){
-				var board;
-				for(board in boards){
-					var boardConfig = boards[board];
-					if(LIB.isHostMethod(document, 'createElement') && board){
-						var time = (new Date).getTime();
-						// Load styles
-						var link = document.createElement('link');
-						link.href = 'boards/'+board+'/board.css?'+time;
-						link.rel = 'stylesheet';
-						if(LIB.isHostObjectProperty(document, 'head') && LIB.isHostMethod(document.head, 'appendChild')){
-							document.head.appendChild(link);
-						}
-						// Load script
-						var url = 'boards/'+board+'/board.js?'+time;
-						Loader.load(url, [board, boardConfig], function(args){
-							handleBoard(args[0], args[1]);
-						});
-					}
-				}
-			}
-			if(LIB && LIB.areFeatures('deferUntilReady')){
-				LIB.deferUntilReady(function(){
-					if(LIB && LIB.isHostObjectProperty(document, 'documentElement')){
-						document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
-					}
-					if(document.title){
-						document.title = document.title.replace('{{ COMPANY }}', config.company);
-					}
-					if(LIB && LIB.isHostMethod(document, 'getElementById')){
-						var companyTitle = document.getElementById('company');								var button = document.getElementById('btn');
-						// Replace company title
-						companyTitle.innerHTML = companyTitle.innerHTML.replace('{{ COMPANY }}', config.company);
-					}
-					loadBoards(config.boards);
-				});
-			}
-		})(window);
-	</script>
+	<script src="/scripts/base.js"></script>
 </body>
 </html>
