XBMC now playing (needs to be run on the htpc)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 				'twitter': {
 					'grid': '12', 
 					'user': 'datagutt'
+				},
+				'XBMC': {
+					'grid': '12', 
+					'host': '192.168.0.46',
+					'port': '80'
 				}
 			}
 		};
@@ -41,6 +46,7 @@
 	<!-- Libraries that various boards require -->
 	<script src="/scripts/twitter.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+	<!-- Load the main file -->
 	<script src="/scripts/base.js"></script>
 </body>
 </html>
