--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					'grid': '12', 
 					'user': 'datagutt'
 				},
-				'XBMC': {
+				'xbmc': {
 					'grid': '12', 
 					'host': '192.168.0.46',
 					'port': '80'
